tests/baselines/reference/expandoFunctionContextualTypesJSDocInTs.errors.txt
tests/cases/compiler/expandoFunctionContextualTypesJSDocInTs.ts(2,17): error TS2307: Cannot find module 'blah' or its corresponding type declarations.
tests/cases/compiler/expandoFunctionContextualTypesJSDocInTs.ts(8,1): error TS2322: Type '() => void' is not assignable to type 'never'.


==== tests/cases/compiler/expandoFunctionContextualTypesJSDocInTs.ts (2 errors) ====
    // GH #38532
    import Foo from "blah";
                    ~~~~~~
!!! error TS2307: Cannot find module 'blah' or its corresponding type declarations.
    
    export function Foo() { }
    
    // This comment should have no effect; this is a TS file.
    /** @type {never} */
    Foo.bar = () => { };
    ~~~~~~~
!!! error TS2322: Type '() => void' is not assignable to type 'never'.
    